--- a/Pertemuan2/Latihan/Style.css
+++ b/Pertemuan2/Latihan/Style.css
@@ -10,6 +10,10 @@ body,html{
     padding: 0px 20px;
 }
 
+.mt-5{
+    margin-top: 10px;
+}
+
 /* For class Navbar */
 .navbar{
     overflow: hidden;
@@ -138,6 +142,7 @@ img {
 
 /* footer */
 .footer {
+    padding: 10px 0px;
     background-color: #212121;
     color: #ffffff;
     font-weight: bold;
@@ -145,4 +150,13 @@ img {
     padding: 10px;
     text-align: center;
     overflow: auto;
+}
+
+.contact{
+    overflow: hidden;
+    float: right;
+}
+
+.contact a{
+    padding: 0px 5px;
 }
